--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,7 @@ Point 4: identify the conclusions and the wider implications.
 
 
 
-**Keywords:**
+**Keywords: preregistration, preregistration template, modelling, applied ecology, conservation decision-making, metaresearch, reproducibility, non-hypothesis testing(?)**
 
 
 ----
@@ -90,6 +90,8 @@ As Pu et al. (2019) identify, a designer's intention for preregistration and use
 Pu et al's key finding: 
 
 \- different users have "different purposes for adopting preregistration, and these differ from the original purpose of distinguishing exploratory and confirmatory findings"
+
+Pu et al. "Current designs represent a failure of designers to make their internal model of preregistration clear to users: the purpose of each question, and indeed the entire form, is often opaque."
 
    
 
@@ -257,6 +259,8 @@ Instruction to
 
 The reason why tried to capture this as we went, is because "the process of creating preregistration  is difficult to reconstruct with interview questions alone" p16.
 
+   
+
 **Case Study: Environmental Flows Management**
 
    
@@ -266,38 +270,68 @@ The reason why tried to capture this as we went, is because "the process of crea
 ----
 
 
-## PRT Conceptual Model and Philosophy underpinning model development ##
-
-
-
-### Model Scientific Workflow ###
+## A methodology for 'Living Preregistrations' ##
 
 
 
 
-What model workflow and set of activities does the template presume?
-
-This section describes the 'model scientific workflow' underpinning  the Preregistration Template. 
+Failing to make the 'internal model of preregistration' clear to users is a critical source of confusion among preregistration template users that may impede preregistration uptake, and undermine the ability of the template to achieve its objectives (Pu et al. 2020). Consequently, in this section we articulate the inner conceptual model of preregistration driving the content, structure and our proposed procedure for implementing the template. 
 
    
 
-I want to include a figure / diagram here visualising and describing some usual / common or even idealised workflow to accompany both the PRT for
-
-A) PRT users.
-
-B) To Explain the inner conceptual model driving the PRT (as per Pu et al.).
+\*\*Modelling workflows for Ecology and Conservation\*\*
 
    
 
-*How does this inform the PRT? These broad phases are used to structure the preregistration template.*
+Table X, below, describes the 'model scientific workflow' underpinning the template, which was identified through the structured collaborative workshop, literature review and qualitative coding. By articulating this workflow, we explicitly state the workflow and sets of activities that the template presumes. We identified and coded decision-points into 6 'phases' in the process of developing, evaluating and analysing a model or models in ecological application: 'problem formulation', 'define conceptual model', 'formalise and specify model', 'Model Validation and Evaluation', 'Model Analysis', 'Model Application'. These phases are comprised of a series of smaller 'steps' and 'substeps'.  These are defined and described in detail within Table X. In terms of how this translates into the format of the preregistration template, these broad phases and steps are used to structure the template, and the descriptions and definitions of the phases and steps are used as 'help-text' in the template interface. 
 
+   
 
-### Preregistration Items ###
+@TODO - anything about *applied contexts??* Aligning with management? (In terms of the structure and steps above).
 
+   
 
+\*\*Iterative Cycle of Model Development\*\*
 
+   
 
-This will be a box or a table with numbered items, with just the preregistration item directives or question. The help-text describing each phase or key steps in the workflow is removed, as this goes in the previous table under 'model scientific workflow'.
+The iterative nature of model development was identified in our structured discussions as a key barrier to adopting preregistration. \<Insert refs to literature describing this\>.  \<Explain what I mean by iterative model development and provide examples\>
+
+   
+
+   
+
+   
+
+   
+
+Typically, the process of preregistration is completely distinct from and precedes the implementation of the analysis plan laid out in the preregistration.	In fact, preregistration has been defined as "the action of confirming an unalterable version of one's research plan prior to collecting data" (Nosek et al. 2018) or prior to analysing the data (Ref, or link to secondary data preregistration template). This results in a linear research workflow, whereby a researcher shifts from the process of ideation and design, documentation of that design in a preregistration, to the process of action, where the researcher executes the plan specified in the preregistration \<insert link to this fig..\>
+
+   
+
+Translating the preregistration process to a modelling research context is thus challenging because the iterative nature of model development conflicts with the inner logic of existing preregistration templates that presume a linear research workflow. For instance, some modelling decisions are inherently dependent on the outcomes and results of previous decisions and analyses, which involves conducting some preliminary or investigatory analyses before being able to specify future decision-steps in an analysis plan, contravening the critical(?adj) feature of preregistration of specifying the analysis plan prior to seeing the data. Moreover, some items in the template, particularly at later stages of modelling, might not be able to be answered by the researcher until the model is fully or close to fully specified on a first-pass (e.g. specifying exactly what sensitivity analyses or uncertainty analyses will be conducted). This might especially hold true for more complex process models. \<Mention that this is not a flaw in preregistration, but rather reflects the inner logic of preregistration for hypothesis-testing contexts\>
+
+   
+
+\*\*The \*checking\* problem\*\*
+
+   
+
+Model Checking:
+
+"Existing preregistration formats are designed primarily for authors to quickly input the desired information, but may verge on being write-only media: they are ill-suited to the checking task that reviewers, paper readers, and in some cases even authors themselves might perform. Thus, we recommend exploring designs that (1) make relevant preregistration content easier to *query* and (2) encourage wider *coverage* of preregistration content during review." Pu et al. 
+
+   
+
+   
+
+\- how to evaluate studies that have used preregistrations and when they should be compared against their preregistration\> This process of "checking" a preregistered study is provisionally defined by Pu et al. as "comparing a manuscript to its preregistration and verifying that the study and the analyses are conducted as the preregistration has specified." Who engages in 'checking' a preregistration? "Authors, reviewers and editors may all engage in checking." *How do we  facilitate checking? And the "checking problem"* "to what detail should or does an author or reviewer / editor check? Pu et al found that the authors engaged in a linear and thorough checking process, but reviewers on editors were not nearly "as exhaustive with checking". How can we facilitate the process? They found that if the "paper is very specific to referring to parts of the preregistration" then this made it easier for reviewers and editors to check. Maybe we could do something else, rather than get the paper to refer to the parts of the preregistration (but I think we should do this with Chris anyway). If we propose the norm of using GitHub to create and check the preregistration., I think this could be a good way of getting around this checking problem. At the very end we have a 'how to box' targeted at authors. And then maybe we have a box targeted at reviewers? Not sure, maybe just focus this paper on authors and the process of creating and using a preregistration.
+
+   
+
+In order to address this confusion among norms, I state the expected norms that the template has been designed around here. However, I don't expect users to agree on this process. Because we have kept the template in a GitHub repository that can be *forked*, people are free to adapt the template (the items themselves) to suit whatever norm they see fit about how preregistrations should be created and used.
+
+@TODO insert table from atlas TI.
 
 
 ### Iterative Model Development & "Living" Preregistrations ###
@@ -305,7 +339,20 @@ This will be a box or a table with numbered items, with just the preregistration
 
 
 
-Paragraph or two describing iterative nature in model development. This was a common theme arising in our discussions and one of the key 'roadblocks' identified.
+Given this defining feature of the modelling process, it is critical that the design of the interface and procedure for implementing the preregistration inherently capture this iterative nature of development. We attempt to do this by...
+
+
+
+
+Capturing this inner logic has repercussions for 
+
+Thus deciding on the inner logic of the template, and what is in and out of scope has been particularly difficult.
+
+One method around this is to accept that the current model of preregistration is not going to work for iterative model development. Again, the more complex the model, the more likely this is to be the case. Consequently I propose a different model of preregistration that I think will work for modeling research contexts. At the moment I'm calling it 'living preregistration' but please suggest another name. Others have termed this 'adaptive preregistration', and this is maybe a better name.
+
+In this model of preregistration, all questions that can be answered, should be answered before any data analysis or modelling proceeds. For some items, particularly during model evaluation and analysis, perhaps only responses of a general nature can be provided. That is OK. As the modelling proceeds. Further detail can be provided and the next phase of analysis can be preregistered. Where the results of model evaluation and analysis reveal that there are problems with the model, or perhaps assumption violations, plans can be changed, and again the next phase of analysis can be preregistered.
+
+A static document for this type of process doesn't really make sense. I propose leveraging the code and project management tools within the GitHub platform as a way of hosting a 'living' or 'adaptive' preregistration. Because GitHub documents are 'time-stamped', the genesis of the preregistration from one version to the next can be traced and tagged with versions. Since the document would exist in the repository with the code itself, any results from analyses that cause the analysis plan to change can be linked and referenced in the updated plan.
 
    
 
@@ -347,15 +394,15 @@ This obviously breaks with the convention of preregistrations as 'static' one-of
 
 Pu et al: tendency for preregistrations to go from vague / general to specific over time.
 
-   
+![Living Preregistration Workflow - Research Workflow for implementing a 'living' preregistration in a modelling context](./figures/LivingPreregistration.png)
 
-\- how to evaluate studies that have used preregistrations and when they should be compared against their preregistration\> This process of "checking" a preregistered study is provisionally defined by Pu et al. as "comparing a manuscript to its preregistration and verifying that the study and the analyses are conducted as the preregistration has specified." Who engages in 'checking' a preregistration? "Authors, reviewers and editors may all engage in checking." *How do we  facilitate checking? And the "checking problem"* "to what detail should or does an author or reviewer / editor check? Pu et al found that the authors engaged in a linear and thorough checking process, but reviewers on editors were not nearly "as exhaustive with checking". How can we facilitate the process? They found that if the "paper is very specific to referring to parts of the preregistration" then this made it easier for reviewers and editors to check. Maybe we could do something else, rather than get the paper to refer to the parts of the preregistration (but I think we should do this with Chris anyway). If we propose the norm of using GitHub to create and check the preregistration., I think this could be a good way of getting around this checking problem. At the very end we have a 'how to box' targeted at authors. And then maybe we have a box targeted at reviewers? Not sure, maybe just focus this paper on authors and the process of creating and using a preregistration.
 
-   
+### Preregistration Items ###
 
-In order to address this confusion among norms, I state the expected norms that the template has been designed around here. However, I don't expect users to agree on this process. Because we have kept the template in a GitHub repository that can be *forked*, people are free to adapt the template (the items themselves) to suit whatever norm they see fit about how preregistrations should be created and used.
 
-![Living Preregistration Workflow](./figures/LivingPreregistration.png)
+
+
+This will be a box or a table with numbered items, with just the preregistration item directives or question. The help-text describing each phase or key steps in the workflow is removed, as this goes in the previous table under 'model scientific workflow'.
 
 
 ### Shiny App ###
@@ -370,12 +417,6 @@ Speak back to the the predefined use-cases, how does our proposed methodology an
 The shiny-app, allows us to tailor the form firstly to authors and analysts. With help-text, and descriptions of the modelling phase, and step under consideration, as well as definitions and references to supporting resources ---  such as decision-tools for choosing and justifying methodological choices. 
 
 By being able to 'generate a report' - we aim to target reviewers/editors, to allow for a condensed version of the template to be exported. Importantly, Pu et al show that "not all preregistered studies confirm to their preregistrations, or are inconsistent in reporting deviations", thus by making the preregistration available to reviewers, and by providing a platform and method for linking the actual analysis under-taken, we can allow reviewers to properly evaluate the preregistration against the final paper. (AND, must talk back to original aim of bad reporting practices in modelling). Moreover, if you combine formatting changes with our proposed method with GitHub, we hope to tailor the presentation of the completed preregistration + analysis, such that actual analyses and decisions can be linked directly to both files and outcomes.
-
-
-### Pu et al. ###
-
-
-
 
 What is the purpose of preregistration? Specifically in modelling.
 
